--- a/Shiny_App/PAR-Daily-Average.Rmd
+++ b/Shiny_App/PAR-Daily-Average.Rmd
@@ -71,11 +71,15 @@ $$\small InstPAR(t) = \cfrac{T_2-t}{T_2-T_1} InstPAR_{T_1}(t)+\cfrac{t-T_1}{T_2-
 
 ## Differences between methods
 
-Navigate to the Plots page for a visual depiction of the similarities and differences between my ratio method and Wang et al.'s methods. You will notice that Wang et al.'s algorithm work great near the equator. However, the closer we get to the poles the more inaccurate Wang's algorithms get. If we accept the PAR mechanics section on this page and accept the idea of linearly interpolating the PAR ratios then Wang et al.'s algorithm can be replicated by assuming that solar elevation is 0 degrees at sunrise and sunset and reaches 90 degrees at mid-day. However, at we get nearer to the poles this assumption becomes less accurate. At the poles the solar elevation is effectively the same throughout the entire day. By interpolating using the assumption inherent in Wang et al.'s algorithm we get InstPAR values that can exceed the theoretically maximum PAR value at that elevation, sometimes by orders of magnitude. For this reason, I use my own, novel, ratio method which is robust to all latitudes, including locations were solar elevation remains positive for the entire day, while remaining consistent with Wang et al.'s values in less extreme latitudes.
+Navigate to the Plots page for a visual depiction of the similarities and differences between my ratio method and Wang et al.'s methods. You will notice that Wang et al.'s algorithm works great near the equator. However, the closer we get to the poles the more inaccurate Wang's algorithms get (try moving latitude to -77 or so with the rest of the options in their defult settings). If we accept the PAR mechanics section on this page and accept the idea of linearly interpolating the PAR ratios then Wang et al.'s algorithm can be replicated by assuming that solar elevation is 0 degrees at sunrise and sunset and reaches 90 degrees at mid-day. However, as we get nearer to the poles this assumption becomes less accurate. At the poles the solar elevation is effectively the same throughout the entire day. By interpolating using the assumption inherent in Wang et al.'s algorithm we get InstPAR values that can exceed the theoretically maximum PAR value at that elevation, sometimes by orders of magnitude. For this reason, I use my own, novel, ratio method which is robust to all latitudes, including locations where solar elevation remains positive for the entire day, while remaining consistent with Wang et al.'s values in less extreme latitudes.
 
 ## Refraction and special cases
 
 Refraction makes our calculations more difficult when the sun is near 0 degrees elevation. When radiation passes through the atmosphere it is refracted and when the sun is at a low elevation the rays pass through much more atmosphere before hitting the surface than the rays that enter the atmosphere perpendicularly. Under standard temperature and pressure conditions refraction only adjusts apparent solar elevation by about .6 degrees at around 0 degrees elevation and quickly and exponentially approaches 0 degrees of refraction. However, with spatial resolution as fine as we have in this data set that means that every day we have observations that pick up positive PAR values before and after our calculated times for sunrise and sunset respectively. If we do not account for this and blindly plug our values into one of the algorithms provided above then our interpolated PAR values are negative. I corrct for these infrequent occurrences, which are easily identified, with a linear contingent plan. In these cases, I ignore solar position and assume a linear relationship between the PAR of the troublesome observation and its neighboring observations. Pseudocode with a graphical guide for exactly how I addressed these situations can be found in this project's [GitHub repository](https://github.com/ethanholdahl/PAR-Daily-Average)
+
+## Remarks
+
+Wang et al.'s algorithm is very good in the majority of cases because it is so similar to the ratio method. However it is not robust to extreme latitudes. My method of looking directly at the ratios is robust to all locations and because the math works out nicely is no more computationally expensive than the existing method.
 
 ## References
 
