commit before branch

--- a/Shiny_App/PAR-Daily-Average.Rmd
+++ b/Shiny_App/PAR-Daily-Average.Rmd
@@ -29,7 +29,9 @@ We know that the amount of radiation emitted from the sun, the solar constant, i
 
 ## Ratio method
 
-Generally, we can estimate the incident PAR for unobserved times by taking a weighted average of the PAR ratios of the nearest observations and multiplying that by the sin of the sun's elevation angle (remember $\small \frac {1}{x} = \sin(elevation)$). PAR ratios are calculated as incident value/sin(elevation angle). The weighted average being based on how close the unobserved incident is to the nearest values. So if there exists 2 observations at times $\small T_1$ and $\small T_2$ with $\small R_1$ and $\small R_2$ as the respective ratios, the estimated incident PAR at time $\small t$ where $\small T_1<t<T_2$ is $\small InstPAR(t) = (R_2 * \frac{t-T_1}{T_2-T_1}+R_1*\frac{T_2-t}{T_2-T_1})*\sin(elevation(t))$. We can estimate PAR between observations by integrating the above equation from $\small T_1$ to $\small T_2$ with respect to $\small t$, and because the calculation is linear we can separate them and calculate the contribution to daily PAR that each observation had separately.
+Generally, we can estimate the incident PAR for unobserved times by taking a weighted average of the PAR ratios of the nearest observations and multiplying that by the sin of the sun's elevation angle (remember $\small \frac {1}{x} = \sin(elevation)$). PAR ratios are calculated as incident value/sin(elevation angle). The weighted average being based on how close the unobserved incident is to the nearest values. So if there exists 2 observations at times $\small T_1$ and $\small T_2$ with $\small R_1$ and $\small R_2$ as the respective ratios, the estimated incident PAR at time $\small t$ where $T_1<t<T_2$ is: 
+$$\small InstPAR(t) = (R_2 * \frac{t-T_1}{T_2-T_1}+R_1*\frac{T_2-t}{T_2-T_1})*\sin(elevation(t))$$
+We can estimate PAR between observations by integrating the above equation from $\small T_1$ to $\small T_2$ with respect to $\small t$, and because the calculation is linear we can separate them and calculate the contribution to daily PAR that each observation had separately.
 
 If there is only one observation in the day or if $\small t$ falls between sunrise and the first observation or between the last observation an sunset then we just use the ratio for the nearest observation ($\small R_1$): $\small InstPAR(t) = R_1*\sin(elevation(t))$.
 
@@ -75,7 +77,7 @@ Navigate to the Plots page for a visual depiction of the similarities and differ
 
 ## Refraction and special cases
 
-Refraction makes our calculations more difficult when the sun is near 0 degrees elevation. When radiation passes through the atmosphere it is refracted and when the sun is at a low elevation the rays pass through much more atmosphere before hitting the surface than the rays that enter the atmosphere perpendicularly. Under standard temperature and pressure conditions refraction only adjusts apparent solar elevation by about .6 degrees at around 0 degrees elevation and quickly and exponentially approaches 0 degrees of refraction. However, with spatial resolution as fine as we have in this data set that means that every day we have observations that pick up positive PAR values before and after our calculated times for sunrise and sunset respectively. If we do not account for this and blindly plug our values into one of the algorithms provided above then our interpolated PAR values are negative. I corrct for these infrequent occurrences, which are easily identified, with a linear contingent plan. In these cases, I ignore solar position and assume a linear relationship between the PAR of the troublesome observation and its neighboring observations. Pseudocode with a graphical guide for exactly how I addressed these situations can be found in this project's [GitHub repository](https://github.com/ethanholdahl/PAR-Daily-Average)
+Refraction makes our calculations more difficult when the sun is near 0 degrees elevation. When radiation passes through the atmosphere it is refracted and when the sun is at a low elevation the rays pass through much more atmosphere before hitting the surface than the rays that enter the atmosphere perpendicularly. Under standard temperature and pressure conditions refraction only adjusts apparent solar elevation by about .6 degrees at around 0 degrees elevation and quickly and exponentially approaches 0 degrees of refraction. However, with spatial resolution as fine as we have in this data set that means that every day we have observations that pick up positive PAR values before and after our calculated times for sunrise and sunset respectively. If we do not account for this and blindly plug our values into one of the algorithms provided above then our interpolated PAR values are negative. I corrct for these infrequent occurrences, which are easily identified, with a linear contingent plan. In these cases, I ignore solar position and assume a linear relationship between the PAR of the troublesome observation and its neighboring observations. Pseudocode with a graphical guide for exactly how I addressed these situations can be found in this project's [GitHub repository](https://github.com/ethanholdahl/PAR-Daily-Average).
 
 ## Remarks
 
